# wildmidi

./: Cargo.toml  README.md  build.rs
examples/player/: Cargo.toml
examples/player/src/: main.rs
src/: lib.rs
